new_tests/semantics/scope/bad/000_LD1.cm

def a:Int = 3
def a:Int = 5
